[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://objects/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/fire_ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/food.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/island.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/rain.png" type="Texture" id=6]
[ext_resource path="res://objects/bg.tscn" type="PackedScene" id=7]
[ext_resource path="res://textures/box01.png" type="Texture" id=8]
[ext_resource path="res://textures/fish.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 497.441, 10 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 229 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 253.264 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 350.501, 21.0301 )

[sub_resource type="Animation" id=5]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1.39475e-05, 26 ), Vector2( 0, -11.0225 ), Vector2( 0, -22.045 ), Vector2( -0.875961, -50.0312 ), Vector2( -7.00001, -50.0899 ), Vector2( -13.3833, -38.2347 ), Vector2( -20.1348, -22.7005 ), Vector2( -29.8446, 67.6635 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.3, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -30.0, -10.0, 0.0, 0.0, 0.0, 30.0, 90.0, 90.0 ]
}

[node name="main" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = -4.0
margin/right = 4.0
margin/bottom = -4.0
script/script = ExtResource( 1 )
create_islands = false

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 236, 184 )
z/z = 2
gravity_scale = 1.0
human = true

[node name="fire_balls" type="Node2D" parent="."]

editor/display_folded = true

[node name="fire_ball" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 460, 100 )

[node name="fire_ball2" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 476, 292 )

[node name="fire_ball5" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 492, 292 )

[node name="fire_ball7" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 508, 292 )

[node name="fire_ball8" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 524, 308 )

[node name="fire_ball9" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 540, 324 )

[node name="fire_ball10" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 556, 324 )

[node name="fire_ball11" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 572, 324 )

[node name="fire_ball12" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 588, 324 )

[node name="fire_ball1" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 444, 116 )

[node name="fire_ball6" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 476, 84 )

[node name="fire_ball13" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 604, 148 )

[node name="fire_ball14" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 620, 164 )

[node name="fire_ball15" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 636, 180 )

[node name="fire_ball16" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 604, 244 )

[node name="fire_ball17" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 620, 260 )

[node name="fire_ball18" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 636, 276 )

[node name="fire_ball19" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 652, 276 )

[node name="fire_ball20" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 700, 84 )

[node name="fire_ball21" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 716, 84 )

[node name="fire_ball22" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 732, 100 )

[node name="fire_ball23" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 988, 100 )

[node name="fire_ball24" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1004, 116 )

[node name="fire_ball25" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1020, 132 )

[node name="fire_ball26" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1116, 164 )

[node name="fire_ball28" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1084, 244 )

[node name="fire_ball29" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1068, 260 )

[node name="fire_ball30" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1052, 276 )
move_pos = Vector2( 0, 50 )

[node name="fire_ball31" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1132, 164 )

[node name="fire_ball32" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1132, 180 )

[node name="fire_ball33" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1148, 164 )

[node name="fire_ball34" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1148, 148 )

[node name="fire_ball35" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1164, 164 )

[node name="fire_ball36" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1228, 228 )

[node name="fire_ball42" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1164, 308 )

[node name="fire_ball37" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1244, 244 )

[node name="fire_ball39" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1228, 132 )

[node name="fire_ball40" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1244, 116 )

[node name="fire_ball43" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1468, 116 )
type = 2
move_pos = Vector2( 0, -50 )
speed = 120

[node name="fire_ball44" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1484, 180 )
type = 2
move_pos = Vector2( 0, -50 )

[node name="fire_ball45" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1516, 148 )
type = 2
move_pos = Vector2( 0, 50 )
speed = 80

[node name="fire_ball46" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1548, 132 )
type = 2
move_pos = Vector2( 0, -50 )

[node name="fire_ball47" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1516, 308 )
type = 2
move_pos = Vector2( 0, -50 )
speed = 50

[node name="fire_ball41" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1260, 100 )

[node name="fire_ball38" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1260, 260 )

[node name="fire_ball27" parent="fire_balls" instance=ExtResource( 3 )]

transform/pos = Vector2( 1132, 36 )

[node name="food" type="Node2D" parent="."]

editor/display_folded = true

[node name="food" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 460, 148 )

[node name="food2" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 716, 164 )

[node name="food3" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 684, 228 )

[node name="food4" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 716, 308 )

[node name="food5" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 940, 212 )

[node name="food6" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 940, 132 )

[node name="food7" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1052, 68 )

[node name="food9" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1196, 308 )

[node name="food10" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1164, 228 )

[node name="food12" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1388, 164 )

[node name="food16" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1324, 292 )

[node name="food17" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1324, 276 )

[node name="food18" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1324, 260 )

[node name="food19" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1324, 244 )

[node name="food13" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1436, 276 )

[node name="food14" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1484, 228 )

[node name="food15" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1532, 84 )

[node name="food11" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1004, 308 )

[node name="food8" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 1052, 132 )

[node name="food1" parent="food" instance=ExtResource( 4 )]

transform/pos = Vector2( 540, 260 )

[node name="islands" type="Node2D" parent="."]

[node name="island" parent="islands" instance=ExtResource( 5 )]

transform/pos = Vector2( 220, 212 )
obj = false

[node name="camera" type="Camera2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 320, 181 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5000.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="camera"]

transform/pos = Vector2( 0, -181 )
config/amount = 64
config/lifetime = 2.0
config/process_mode = 1
config/half_extents = Vector2( 800, 0 )
config/local_space = false
config/texture = ExtResource( 6 )
params/direction = 315.0
params/spread = 0.0
params/linear_velocity = 600.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/linear_velocity = 0.5

[node name="floor" type="StaticBody2D" parent="camera"]

transform/pos = Vector2( -480, -272 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.829821, 0, 0, 1, 545.345, 459.754 )
shapes/0/trigger = false
collision/layers = 6
collision/mask = 6
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/floor"]

visibility/light_mask = 2
transform/pos = Vector2( 545.345, 459.754 )
transform/scale = Vector2( 0.829821, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="walls" type="StaticBody2D" parent="camera"]

transform/pos = Vector2( -480, -272 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.829821, 0, 0, 1, 545.345, 79.0544 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 1 )
shapes/1/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 145.071, 471.312 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="camera/walls"]

transform/pos = Vector2( 545.345, 79.0544 )
transform/scale = Vector2( 0.829821, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D1" type="CollisionShape2D" parent="camera/walls"]

transform/pos = Vector2( 145.071, 471.312 )
transform/rot = 90.0
shape = SubResource( 1 )
trigger = false
_update_shape_index = 1
__meta__ = {
"_edit_lock_": true
}

[node name="side_killer" type="Area2D" parent="camera"]

editor/display_folded = true
transform/pos = Vector2( -506.588, 9.99994 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/side_killer"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="in_wall" type="Area2D" parent="camera" groups=[
"in_wall",
]]

editor/display_folded = true
transform/pos = Vector2( 336, 27 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/in_wall"]

shape = SubResource( 3 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="fish_trap" type="Area2D" parent="camera"]

transform/pos = Vector2( 0, 176 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="camera/fish_trap"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="fish_trap_timer" type="Timer" parent="camera/fish_trap"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[node name="bg" parent="." instance=ExtResource( 7 )]

[node name="ui" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="TextureButton" type="TextureButton" parent="ui"]

visibility/visible = false
visibility/opacity = 0.2
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 260.0
margin/right = 40.0
margin/bottom = 276.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton1" type="TextureButton" parent="ui"]

visibility/visible = false
visibility/opacity = 0.2
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 457.0
margin/top = 11.0
margin/right = 473.0
margin/bottom = 27.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="TextureButton2" type="TextureButton" parent="ui"]

visibility/visible = false
visibility/opacity = 0.2
rect/scale = Vector2( 5, 5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 549.0
margin/top = 11.0
margin/right = 565.0
margin/bottom = 27.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="fish" type="StaticBody2D" parent="ui"]

transform/pos = Vector2( 324, 370.086 )
z/z = 10
input/pickable = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Sprite" type="Sprite" parent="ui/fish"]

transform/pos = Vector2( 12, 77.9141 )
transform/rot = -30.0
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )
hframes = 3

[node name="anim" type="AnimationPlayer" parent="ui/fish"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fish = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="over_water" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="body_enter" from="camera/side_killer" to="." method="_on_side_killer_body_enter"]

[connection signal="body_enter" from="camera/fish_trap" to="." method="_on_fish_trap_body_enter"]

[connection signal="body_exit" from="camera/fish_trap" to="." method="_on_fish_trap_body_exit"]

[connection signal="timeout" from="camera/fish_trap/fish_trap_timer" to="." method="_on_fish_trap_timer_timeout"]

[connection signal="button_down" from="ui/TextureButton" to="." method="_on_TextureButton_button_down"]

[connection signal="button_up" from="ui/TextureButton" to="." method="_on_TextureButton_button_up"]

[connection signal="mouse_exit" from="ui/TextureButton" to="." method="_on_TextureButton_mouse_exit"]

[connection signal="button_down" from="ui/TextureButton1" to="." method="_on_TextureButton1_button_down"]

[connection signal="button_up" from="ui/TextureButton1" to="." method="_on_TextureButton1_button_up"]

[connection signal="button_down" from="ui/TextureButton2" to="." method="_on_TextureButton2_button_down"]

[connection signal="button_up" from="ui/TextureButton2" to="." method="_on_TextureButton2_button_up"]

[connection signal="timeout" from="over_water" to="." method="_on_over_water_timeout"]


